<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="@bool/pref_show_base_default"
        android:key="@string/pref_show_base_key"
        android:summaryOff="@string/pref_show_false"
        android:summaryOn="@string/pref_show_true"
        android:title="@string/pref_show_base_label"
        />

    <CheckBoxPreference
        android:defaultValue="@bool/pref_show_mid_range_default"
        android:key="@string/pref_show_mid_range_key"
        android:summaryOff="@string/pref_show_false"
        android:summaryOn="@string/pref_show_true"
        android:title="@string/pref_show_mid_range_label"
        />

    <CheckBoxPreference
        android:defaultValue="@bool/pref_show_treble_default"
        android:key="@string/pref_show_treble_key"
        android:summaryOff="@string/pref_show_false"
        android:summaryOn="@string/pref_show_true"
        android:title="@string/pref_show_treble_label"
        />

    <EditTextPreference
        android:defaultValue="@string/pref_size_default"
        android:key="@string/pref_size_key"
        android:title="@string/pref_size_label"

        />

    <ListPreference
        android:defaultValue="@string/pref_color_red_value"
        android:key="@string/pref_color_key"
        android:entries="@array/pre_color_option_labels"
        android:entryValues="@array/pre_color_option_values"
        android:title="@string/pref_color_label"
        />

</PreferenceScreen>